fix(styles/theme): lighten dark mode title gradient

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -91,8 +91,8 @@ $highlight: #79ffe1;
 
   --chip-background: #{color.mix($on-background, $background, 12%)};
 
-  --title-left: #{color.adjust($primary, $hue: 10%, $lightness: -10%)};
-  --title-right: #{color.adjust($primary, $hue: -15%)};
+  --title-left: #{$primary};
+  --title-right: #{color.adjust($primary, $hue: -25%, $lightness: 10%)};
 
   --accents-6: #999;
   --accents-5: #888;
